# 8bms

./: README.md
hello-8bit-world/: .env  Makefile  README.md  pyproject.toml  rec.bas  run_socat.sh
hello-8bit-world/hello_8bit_world/: host.py  rec.py  send.py
